fix: signup customer validation fixed
