# src/application/services/api/config/swagger.json
@@ -375,9 +375,7 @@
             "bearerAuth": []
           }
         ],
-        "tags": [
-          "Admin"
-        ],
+        "tags": ["Admin"],
         "responses": {
           "200": {
             "description": "All pending cheffs",
@@ -403,9 +401,7 @@
             "bearerAuth": []
           }
         ],
-        "tags": [
-          "Admin"
-        ],
+        "tags": ["Admin"],
         "responses": {
           "200": {
             "description": "All approved cheffs",
@@ -431,9 +427,7 @@
             "bearerAuth": []
           }
         ],
-        "tags": [
-          "Admin"
-        ],
+        "tags": ["Admin"],
         "parameters": [
           {
             "id": null,
@@ -464,9 +458,7 @@
             "bearerAuth": []
           }
         ],
-        "tags": [
-          "Admin"
-        ],
+        "tags": ["Admin"],
         "parameters": [
           {
             "id": null,
@@ -501,9 +493,7 @@
     "/admin/sign-in": {
       "post": {
         "description": "Sign in as admin",
-        "tags": [
-          "Admin"
-        ],
+        "tags": ["Admin"],
         "requestBody": {
           "content": {
             "application/json": {
@@ -548,9 +538,7 @@
             "bearerAuth": []
           }
         ],
-        "tags": [
-          "Admin"
-        ],
+        "tags": ["Admin"],
         "responses": {
           "200": {
             "description": "Authenticated as admin",
@@ -586,9 +574,7 @@
             "bearerAuth": []
           }
         ],
-        "tags": [
-          "Cheff"
-        ],
+        "tags": ["Cheff"],
         "responses": {
           "200": {
             "description": "All carts with cheff food plates",
@@ -614,9 +600,7 @@
             "bearerAuth": []
           }
         ],
-        "tags": [
-          "Cheff"
-        ],
+        "tags": ["Cheff"],
         "responses": {
           "200": {
             "description": "All carts with cheff food plates sent",
@@ -642,9 +626,7 @@
             "bearerAuth": []
           }
         ],
-        "tags": [
-          "Cheff"
-        ],
+        "tags": ["Cheff"],
         "responses": {
           "200": {
             "description": "Cart approved",
@@ -673,9 +655,7 @@
             "bearerAuth": []
           }
         ],
-        "tags": [
-          "Cheff"
-        ],
+        "tags": ["Cheff"],
         "responses": {
           "200": {
             "description": "Cart refused",
@@ -704,9 +684,7 @@
             "bearerAuth": []
           }
         ],
-        "tags": [
-          "Cheff"
-        ],
+        "tags": ["Cheff"],
         "requestBody": {
           "content": {
             "application/json": {
@@ -728,9 +706,7 @@
     },
     "/cheffs/request-registration": {
       "post": {
-        "tags": [
-          "Cheff"
-        ],
+        "tags": ["Cheff"],
         "requestBody": {
           "content": {
             "application/json": {
@@ -753,9 +729,7 @@
     "/cheffs/sign-in": {
       "post": {
         "description": "Sign in as cheff",
-        "tags": [
-          "Cheff"
-        ],
+        "tags": ["Cheff"],
         "requestBody": {
           "content": {
             "application/json": {
@@ -783,9 +757,7 @@
             "bearerAuth": []
           }
         ],
-        "tags": [
-          "Cheff"
-        ],
+        "tags": ["Cheff"],
         "responses": {
           "200": {
             "description": "Authenticated as cheff",
@@ -821,9 +793,7 @@
             "bearerAuth": []
           }
         ],
-        "tags": [
-          "Customer"
-        ],
+        "tags": ["Customer"],
         "parameters": [
           {
             "id": null,
@@ -853,9 +823,7 @@
     "/customers/sign-in": {
       "post": {
         "description": "Sign in as customer",
-        "tags": [
-          "Customer"
-        ],
+        "tags": ["Customer"],
         "requestBody": {
           "content": {
             "application/json": {
@@ -900,9 +868,7 @@
             "bearerAuth": []
           }
         ],
-        "tags": [
-          "Customer"
-        ],
+        "tags": ["Customer"],
         "responses": {
           "200": {
             "description": "Authenticated as customer",
@@ -933,9 +899,7 @@
     "/": {
       "get": {
         "description": "GoCheff API",
-        "tags": [
-          "Config"
-        ],
+        "tags": ["Config"],
         "responses": {
           "200": {
             "description": "Returns a message with the API name"
