# src/application/services/api/routes/Customers/index.ts
@@ -9,35 +9,6 @@ import { isAuthenticatedMiddleware } from "../../../../../middlewares/IsAuthenti
 
 const customersRoutes = Router();
 
-/**
- * @swagger
- * /customers/sign-in:
- *   post:
- *     description: Sign in as customer
- *     tags:
- *       - Customer
- *     requestBody:
- *       content:
- *         application/json:
- *           schema:
- *             $ref: '#/components/schemas/CustomerSignInBodySchema'
- *     responses:
- *       200:
- *         description: Customer signed in
- *         content:
- *           application/json:
- *             schema:
- *               type: object
- *               properties:
- *                 user:
- *                   $ref: '#/components/schemas/Customer'
- *                   description: Customer
- *                 token:
- *                   type: string
- *                   description: JWT token
- *       404:
- *         description: Customer not found or password does not match
- */
 customersRoutes.post(
   "/sign-up",
   validateSchemaMiddleware.handle({
